hphp/test/slow/readonly/as.php.expectf
Fatal error: This expression is readonly, but we expected a mutable value because this function does not return readonly. Please mark it to return readonly if needed. in %s on line 13
